# gz_procedural_worlds

./: .gitignore  .gitmodules  Dockerfile.worldgen  README.md  pyproject.toml
configs/: default.yaml  dense_forest.yaml  mixed_obstacles.yaml  urban_canyon.yaml
models/concrete_barrier/: model.config  model.sdf
models/pole/: model.config  model.sdf
models/wall_segment/: model.config  model.sdf
models/wall_segment_tall/: model.config  model.sdf
scripts/: generate_world.sh  generate_world_docker.sh  launch_with_world.sh
src/gz_procedural_worlds/: __init__.py  cli.py  config.py  connectivity.py  generator.py  models.py  placement.py  renderer.py  visualize.py
templates/: world_base.sdf.j2
tests/: test_config.py  test_connectivity.py  test_generator.py  test_placement.py  test_renderer.py
